# vla-scratch

./: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml  split_bbox_and_pointing_to_demos.py  train_policy.py
.libero_cfg/: config.yaml
examples/: README.md
examples/bbox_cotrain/: README.md  eval_bbox_cotrain.py  visualize_attention.py  visualize_bbox.py
examples/libero/: README.md  eval_libero_policy.py  simulation.py
examples/libero/scripts/: train-libero-paligemma.sh  train-libero-qwen.sh  train-libero-smolvlm.sh
normalization_stats/bbox_cotrain/: lerobot_norm_stats-horizon_12-history_0.npz  lerobot_norm_stats-horizon_24-history_0.npz
normalization_stats/dont_blind/: lerobot_norm_stats-horizon_10-history_0.npz
normalization_stats/libero/: lerobot_dataset-horizon_10-history_1.npz
normalization_stats/libero/IPEC-COMMUNITY/: libero_spatial_no_noops_1.0.0_lerobot.npz
patches/: lerobot_dataset.patch
scripts/: README.md  compute_norm_stats.py  compute_success_rate.py  convert_er_data_to_lerobot_3.py  eval.py  eval_bbox_iou.py  eval_policy.py  serve_policy.py  train_policy.py
scripts/generation/: dummy_dataset.py  test_qwen3vl_generation-compare.py  test_qwen3vl_generation.py  test_smolvlm_generation_compare.py
scripts/regenerate_bbox_dataset/: check_ecot_lerobot_alignment.py  generate_bboxes_jsonl.py
vla_scratch/: helpers.py
vla_scratch/configs/: __init__.py  data_mix.py
vla_scratch/configs/data/: __init__.py  bbox_cotrain.py  dont_blind.py  libero.py  libero_global.py
vla_scratch/configs/eval_data/: __init__.py  libero_er_bbox.py  libero_mix120.py  libero_mix120_average.py  libero_mix120_average_action_a_er_bbox_b.py  libero_mix120_bbox.py
vla_scratch/configs/train_data/: __init__.py  libero_er_bbox.py  libero_mix120.py  libero_mix120_average_action_a_er_bbox_b.py  libero_mix120_bbox.py
vla_scratch/datasets/: README.md  __init__.py  common.py  config.py  transforms.py  visualize.py
vla_scratch/datasets/bbox_cotrain/: config.py  dataset.py
vla_scratch/datasets/dont_blind/: config.py  lerobot_dataset.py
vla_scratch/datasets/libero/: common.py  config.py  data_keys.py  dataset.py  lerobot_dataset.py  lerobot_ipec.py  transforms.py
vla_scratch/datasets/libero_global/: config.py  dataset.py  dataset_ipec.py  transforms.py
vla_scratch/datasets/libero_mix120/: config.py  dataset.py
vla_scratch/datasets/utils/: paligemma_bbox_format.py
vla_scratch/helpers/: data.py  training.py
vla_scratch/policies/: README.md  __init__.py  base.py  config.py  utils.py
vla_scratch/policies/modules/: dit.py
vla_scratch/policies/modules/action_expert/: cross_attention_dit.py  dit.py
vla_scratch/policies/modules/vlm_bridge/: base.py
vla_scratch/policies/modules/vlm_bridge/paligemma/: bridge.py  processor.py  utils.py
vla_scratch/policies/modules/vlm_bridge/qwen/: bridge.py  processor.py  utils.py
vla_scratch/policies/pi/: config.py  policy.py  transforms.py  utils.py
vla_scratch/policies/utils/: __init__.py  data_types.py  training.py  transformers.py
vla_scratch/serving/: zmq_policy_client.py  zmq_policy_server.py
vla_scratch/transforms/: README.md  common.py  data_keys.py  data_types.py  normalization.py
vla_scratch/utils/: checkpoint.py  config.py
(+3 files in other folders)
