[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vla-scratch"
version = "0.1.0"
description = "Utilities for working with VLA Scratch datasets and policies."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision==0.22.0",
    "numpy",
    "h5py",
    "transformers",
    "jaxtyping",
    "fsspec",
    "filelock",
    "tqdm",
    "einops",
    "tensordict",
    "hydra-core",
    "omegaconf",
    "wandb",
    "setproctitle",
    "pillow",
    "setuptools",
    # serve policy
    "websockets",
    "msgpack",
    "pdbpp",
    "datasets",
    "jsonlines>=4.0.0",
    "matplotlib>=3.9.4",
    "lerobot",
    "torchcodec>=0.5",
    "accelerate>=1.11.0",
    "mujoco>=3.3.7",
]

[tool.uv.sources]
# lerobot = { git = "https://github.com/huggingface/lerobot", rev = "d602e8169cbad9e93a4a3b3ee1dd8b332af7ebf8" }
lerobot = { path = "../lerobot" }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "vla_scratch",
    "vla_scratch.*",
]
namespaces = true

[tool.uv]
python-install-mirror = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
