[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vla-scratch"
version = "0.1.0"
description = "Utilities for working with VLA Scratch datasets and policies."
requires-python = "==3.10.*"
dependencies = [
    "torch",
    "torchvision==0.22.0",
    "numpy",
    "h5py",
    "transformers==4.57.1",
    "jaxtyping",
    "fsspec",
    "filelock",
    "tqdm",
    "einops",
    "tensordict",
    "hydra-core",
    "omegaconf",
    "wandb",
    "setproctitle",
    "pillow",
    "setuptools",
    # serve policy
    "pyzmq",
    "msgpack",
    "pdbpp",
    "datasets",
    "jsonlines",
    "matplotlib",
    "accelerate",
    "mujoco",
    "viser",
    "art",
    "lerobot @ git+https://github.com/huggingface/lerobot@v0.4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "vla_scratch",
    "vla_scratch.*",
]
namespaces = true

[tool.uv]
python-install-mirror = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
